@@ -1,6 +1,6 @@
 [tool:pytest]
 testpaths = "tests"
-addopts = "-xq"
+addopts = "-sxq"
 
 [metadata]
 name = simpleconf
